--- a/src/touchpoint-ui/Components/Containers/SplitScreen.css
+++ b/src/touchpoint-ui/Components/Containers/SplitScreen.css
@@ -15,7 +15,8 @@
 
 .SplitScreen .gutter{
 	width: 100%;
-	background-color: red;
+	background-color: var(--navColor);
+	opacity: 60%;
 	cursor: n-resize;
 	pointer-events: all;
 }
