--- a/src/touchpoint-ui/Components/Core/TouchPointApp.css
+++ b/src/touchpoint-ui/Components/Core/TouchPointApp.css
@@ -47,8 +47,9 @@ body {
 	  sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vh;
+	overflow: hidden;
 }
 
 a{
