--- a/src/touchpoint-ui/Components/Display/DisplaySupport/FilterMenu.css
+++ b/src/touchpoint-ui/Components/Display/DisplaySupport/FilterMenu.css
@@ -6,6 +6,7 @@
 	position: relative;
 	width: auto;
 	display: flex;
+	z-index: 100;
 }
 
 .FilterMenu .topMenu{
